--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Welome to my world</h1>
     <header id="header">
         <a href="#" class="logo"></a>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="#" class="active">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Destination</a></li>
