--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>Welome to my world</h1>
     <header id="header">
-        <a href="#" class="logo"></a>
+        <a href="#" class="logo"> Omnya Ellethy </a>
         <ul>
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#">About</a></li>
@@ -17,5 +16,8 @@
             <li><a href="#">Destination</a></li>
         </ul>
     </header>
+    <section>
+        <h2 id="text"><span>Welcome to my</span><br>world</h2>
+    </section>
 </body>
 </html>
