--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     </header>
     <section>
         <h2 id="text"><span>Welcome to my</span><br>world</h2>
+        <a href="#" id="btn">Explore</a>
     </section>
+    <div class="sec">
+        <h2>about me</h2>
+        <p>put whatever i want here</p>
+    </div>
 </body>
 </html>
