--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     </header>
     <section>
         <h2 id="text"><span>Welcome to my</span><br>world</h2>
+        <img src="icons8-bird-90.png" id="bird1" >
+        <img src="icons8-bird-90.png" id="bird2" >
+        <img src="purple-patches-blooming-lavender-field.jpg" id="bird1" >
         <a href="#" id="btn">Explore</a>
     </section>
     <div class="sec">
