--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>OmnyaEllethy</title>
+<title>Omnya Ellethy</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="style2.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body class="w3-white">
 
@@ -47,7 +47,7 @@
   <header class="w3-padding-16 w3-center w3-container w3-white" id="home">
     <h1 class="w3-xxxlarge w3-sans-serif"><span class="w3-hide-small">I'm </span>Omnya Ellethy</h1>
     <p>A Software Engineer</p>
-    <img src="Lovepik_com-401404860-lavender.png" alt="Lavender" class="w3-image">
+    <img src="Images/lavender.png" alt="Lavender" class="w3-image">
   </header>
 
 <!-- About Section -->
@@ -59,7 +59,7 @@
         that <br>give meaning to users and be helpful to them <br>cause technology meant to provide us easier
         <br>and meaningful life. love to design anything &<br>everything, care about details.</p>
       <div class="about-image  w3-row-padding" style="margin:0 -16px">
-        <img src="Omnya.jpeg" class="me-img w3-circle w3-halfffe">
+        <img src="Images/personal pic.jpeg" class="me-img w3-circle w3-halfe2">
       </div>
     </div>
   </div><br>
@@ -105,7 +105,7 @@
     <h2 class="w3-text-navy-head section-heading">Contact Me</h2>
     <hr style="width:200px; margin: 0 auto" class="w3-opacity">
 
-    <div class="w3-section">
+    <div class="w3-section contact-section">
       <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Cairo, Egypt</p>
       <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +201011239162</p>
       <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: omnya.ellethy2000@gmail.com</p>
